update my index.html file

--- a/index.html
+++ b/index.html
@@ -15,25 +15,51 @@
 </head>
 
 <body>
-        <nav>
-            <div class="icons">
-                <div class="logo">Masterpiece pizza</div>
-                <div class="links">
-                    <a href="#Home">
-                        <ol>Home</ol>
-                    </a>
-                    <a href="#About">
-                        <ol>About Us</ol>
-                    </a>
-                    <a href="#orders">
-                        <ol>Orders</ol>
-                    </a>
-                    <a href="#Contacts">
-                        <ol>Contacts</ol>
-                    </a>
-                </div>
+    <nav>
+        <div class="icons">
+            <div class="logo">Masterpiece pizza</div>
+            <div class="links">
+                <a href="#Home">
+                    <ol>Home</ol>
+                </a>
+                <a href="#About">
+                    <ol>About Us</ol>
+                </a>
+                <a href="#orders">
+                    <ol>Orders</ol>
+                </a>
+                <a href="#Contacts">
+                    <ol>Contacts</ol>
+                </a>
             </div>
-        </nav>
+        </div>
+    </nav>
+    <div class="home">
+        <div class="one">
+            <img src="./assets/pizzavector-removebg-preview.png">
+        </div>
+        <div class="message">
+            <h1>Hello! Come get a<br> slice of <span>heaven!</span></h1>
+        </div>
+    </div>
+    <button class="btn1 btn1-outline-info btn-lg btn-block">Order Now</button>
+    <!-- END OF HOME SECTION -->
+    <!-- <div class="container"> -->
+        <div class="our-story" id="About">
+            <div class="header">
+                <hi>Our Story</hi>
+            </div>
+            <div class="two">
+                <img src="./assets/aboutpizza-removebg-preview.png" height="300">
+            </div>
+            <div class="story">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Veritatis, alias mollitia! Aspernatur
+                    quo, <br>asperiores praesentium excepturi consequatur <br>inventore omnis deserunt! Error deserunt
+                    nihil aliquid animi <br>doloremque laborum saepe cum sint.</p>
+            </div>
+
+        </div>
+    </div>
 
 </body>
 
