--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./bootstrap-folder/bootstrap-5.0.2-dist/css/bootstrap-grid.min.css">
-    <link rel="stylesheet" href="./bootstrap-folder/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.ico">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -44,22 +44,47 @@
     </div>
     <button class="btn1 btn1-outline-info btn-lg btn-block">Order Now</button>
     <!-- END OF HOME SECTION -->
-    <!-- <div class="container"> -->
-        <div class="our-story" id="About">
-            <div class="header">
-                <hi>Our Story</hi>
-            </div>
-            <div class="two">
-                <img src="./assets/aboutpizza-removebg-preview.png" height="300">
-            </div>
-            <div class="story">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Veritatis, alias mollitia! Aspernatur
-                    quo, <br>asperiores praesentium excepturi consequatur <br>inventore omnis deserunt! Error deserunt
-                    nihil aliquid animi <br>doloremque laborum saepe cum sint.</p>
-            </div>
+    <div class="our-story" id="About">
+        <div class="header">
+            <hi>Our Story</hi>
+        </div>
+        <div class="two">
+            <img src="./assets/aboutpizza-removebg-preview.png" height="300">
+        </div>
+        <div class="story">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Veritatis, alias mollitia! Aspernatur
+                quo, <br>asperiores praesentium excepturi consequatur <br>inventore omnis deserunt! Error deserunt
+                nihil aliquid animi <br>doloremque laborum saepe cum sint.</p>
+        </div>
 
+    </div>
+    <div class="container">
+        <div id="menu">
+            <h3>What we offer</h3>
+            <div class="pizza">
+                <div class="card" id="tikka" style="width: 18rem;">
+                    <img src="./assets/chicken-tikka-pizza_9402.jpg" height="200" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Chicken Tikka Pizza.<br>Large<br>@1250</p>
+                    </div>
+                </div>
+                <div class="card" id="peporoni" style="width: 18rem;">
+                    <img src="./assets/peporoni.jpg" height="200" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Peporoni Pizza.<br>Medium<br>@1000</p>
+                    </div>
+                </div>
+                <div class="card" id="hawalian" style="width: 18rem;">
+                    <img src="./assets/hawaiianpizza_opener.jpg" height="200" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Hawalian Pizza.<br>Small<br>@600</p>
+                    </div>
+
+                </div>
+            </div>
         </div>
     </div>
+
 
 </body>
 
