--- a/masterpizza.html
+++ b/masterpizza.html
@@ -146,12 +146,12 @@
   </div>
   <div class="container" id="yourorder">
     <div class="order-layout">
-      <div class="controls-top text-center" id="Order-now">
+      <div class="controls-top text-center" id="Order-now" >
       <h2>Make an order</h2>
       <div class="row">
         <div class="col-md-6">
           <form action="" id="lets-order"><label for="myflavor">Flavor</label>
-            <select class="browser-default custom-select custom-select-md mb-3 name" id="flavor">
+            <select class="browser-default custom-select custom-select-md mb-3 name" id="flavor" onchange="pizzaSelectChange()">
               <option value=""></option>
               <option value="Hawaiian">Hawaiian</option>
               <option value="Margherita">vegeterian</option>
@@ -161,7 +161,7 @@
               <option value="Chicken Tikka">Chicken Tikka</option>
             </select><br>
             <label for="mysize">Size</label>
-            <select class="browser-default custom-select custom-select-md mb-3" id="size">
+            <select class="browser-default custom-select custom-select-md mb-3" id="size" onchange="proportionSelectChange()">
               <option value=""></option>
               <option value="Extra large">Extra large Ksh. 1550</option>
               <option value="Large">Large Ksh. 1250</option>
@@ -169,37 +169,23 @@
               <option value="Small">Small Ksh. 500</option>
             </select><br>
             <label for="crust">Crust</label>
-            <select class="browser-default custom-select custom-select-md mb-3" id="crust">
+            <select class="browser-default custom-select custom-select-md mb-3" id="crust" onchange="crustySelectChange()">
               <option value=""></option>
               <option value="Thin">Thin Ksh. 100</option>
               <option value="Thick">Thick Ksh. 200</option>
               <option value="DoubleStack">DoubleStack Ksh. 250</option>
             </select><br>
-            <label for="toppings">Toppings </label><br>
-            <div class="custom-control custom-checkbox custom-control-inline">
-              <input type="checkbox" class="custom-control-input" id="Bacon" value="Bacon" name="toppings">
-              <label class="custom-control-label" for="Bacon">Bacon @200</label>
-            </div>
-            <div class="custom-control custom-checkbox custom-control-inline">
-              <input type="checkbox" class="custom-control-input" id="Extra-meat" value="Extra-meat" name="toppings">
-              <label class="custom-control-label" for="Extra-meat">Extra-cheese @150 </label>
-            </div>
-            <div class="custom-control custom-checkbox custom-control-inline">
-              <input type="checkbox" class="custom-control-input" id="Mushrooms" value="Mushrooms" name="toppings">
-              <label class="custom-control-label" for="Mushrooms">Mushrooms @100</label>
-            </div>
-            <div class="custom-control custom-checkbox custom-control-inline">
-              <input type="checkbox" class="custom-control-input" id="cheese" value="cheese" name="toppings">
-              <label class="custom-control-label" for="cheese">pinnapple @150</label>
-            </div>
-            <div class="custom-control custom-checkbox custom-control-inline">
-              <input type="checkbox" class="custom-control-input" id="pepper" value="pepper" name="toppings">
-              <label class="custom-control-label" for="pepper">Pepper @50</label>
-            </div>
-            <br>
+            <label for="topping">Topping</label>
+            <select class="browser-default custom-select custom-select-md mb-3" id="topping" onchange="toppySelectChange()">
+              <option value=""></option>
+              <option value="pepper">pepper Ksh. 100</option>
+              <option value="pinapple">pinnapple Ksh. 200</option>
+              <option value="mushroom">mushroom Ksh. 250</option>
+              <option value="bacon">bacon Ksh. 300</option>
+            </select><br>
             <label for="number">Quantity</label>
-            <input type="number" class="form-control" id="number" placeholder="Quantity" min="1" required>
-            <button type="order" class="btn btn-green order">Proceed</button>
+            <input type="number" class="form-control" id="number" placeholder="Quantity" min="1" required onchange="quantitySelectChange()">
+            <button type="order" class="btn-order">Proceed</button>
           </form>
         </div>
         <div class="col-md-6">
@@ -233,7 +219,7 @@
         <br><br>
         <div class="delivery">
           <p id="del"></p>
-          <form action="" class="del">
+          <form action="" class="deliver-form">
             <div class="form-group">
               <input type="text" id="name" class="form-control mb-3" placeholder="Full Name">
               <input type="text" id="phone" class="form-control mb-3" placeholder="Phone Number">
@@ -248,7 +234,7 @@
   </div>
   </div>
   <div class="contacts">
-    <h2>CONTACT US</h2>
+    <h2>Contact Us</h2>
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-6 mt-4">
@@ -270,7 +256,7 @@
       </div>
     </div>
   </div>
- <div class="footer text-center"></div>
+ <div class="footer text-center">
     <footer>
       Masterpiece pizza
       <br> 2021
@@ -280,7 +266,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<script src="js/scripts.js"></script>
+<script src="index.js"></script>
 
 
 </body>
