--- a/masterpizza.html
+++ b/masterpizza.html
@@ -146,78 +146,93 @@
   </div>
   <div class="container" id="yourorder">
     <div class="order-layout">
-      <div class="controls-top text-center" id="Order-now" >
-      <h2>Make an order</h2>
-      <div class="row">
-        <div class="col-md-6">
-          <form action="" id="lets-order"><label for="myflavor">Flavor</label>
-            <select class="browser-default custom-select custom-select-md mb-3 name" id="flavor" onchange="pizzaSelectChange()">
-              <option value=""></option>
-              <option value="Hawaiian">Hawaiian</option>
-              <option value="Margherita">vegeterian</option>
-              <option value="Peperoni">Peperoni</option>
-              <option value="Mexican Wave">Mexican Wave</option>
-              <option value="Gourmet">new york slice</option>
-              <option value="Chicken Tikka">Chicken Tikka</option>
-            </select><br>
-            <label for="mysize">Size</label>
-            <select class="browser-default custom-select custom-select-md mb-3" id="size" onchange="proportionSelectChange()">
-              <option value=""></option>
-              <option value="Extra large">Extra large Ksh. 1550</option>
-              <option value="Large">Large Ksh. 1250</option>
-              <option value="Medium">Medium Ksh. 700</option>
-              <option value="Small">Small Ksh. 500</option>
-            </select><br>
-            <label for="crust">Crust</label>
-            <select class="browser-default custom-select custom-select-md mb-3" id="crust" onchange="crustySelectChange()">
-              <option value=""></option>
-              <option value="Thin">Thin Ksh. 100</option>
-              <option value="Thick">Thick Ksh. 200</option>
-              <option value="DoubleStack">DoubleStack Ksh. 250</option>
-            </select><br>
-            <label for="topping">Topping</label>
-            <select class="browser-default custom-select custom-select-md mb-3" id="topping" onchange="toppySelectChange()">
-              <option value=""></option>
-              <option value="pepper">pepper Ksh. 100</option>
-              <option value="pinapple">pinnapple Ksh. 200</option>
-              <option value="mushroom">mushroom Ksh. 250</option>
-              <option value="bacon">bacon Ksh. 300</option>
-            </select><br>
-            <label for="number">Quantity</label>
-            <input type="number" class="form-control" id="number" placeholder="Quantity" min="1" required onchange="quantitySelectChange()">
-            <button type="order" class="btn-order">Proceed</button>
-          </form>
+      <div class="controls-top text-center" id="Order-now">
+        <h2>Make an order</h2>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="card1">
+              <div class="card-header bg-white">
+                <form action="" id="lets-order"><label for="myflavor">Flavor</label>
+                  <select class="browser-default custom-select custom-select-md mb-3 name" id="flavor"
+                    onchange="pizzaSelectChange()">
+                    <option value=""></option>
+                    <option value="Hawaiian">Hawaiian</option>
+                    <option value="Margherita">vegeterian</option>
+                    <option value="Peperoni">Peperoni</option>
+                    <option value="Mexican Wave">Mexican Wave</option>
+                    <option value="Gourmet">new york slice</option>
+                    <option value="Chicken Tikka">Chicken Tikka</option>
+                  </select><br>
+                  <label for="mysize">Size</label>
+                  <select class="browser-default custom-select custom-select-md mb-3" id="size"
+                    onchange="proportionSelectChange()">
+                    <option value=""></option>
+                    <option value="Extra large">Extra large Ksh. 1550</option>
+                    <option value="Large">Large Ksh. 1250</option>
+                    <option value="Medium">Medium Ksh. 700</option>
+                    <option value="Small">Small Ksh. 500</option>
+                  </select><br>
+                  <label for="crust">Crust</label>
+                  <select class="browser-default custom-select custom-select-md mb-3" id="crust"
+                    onchange="crustySelectChange()">
+                    <option value=""></option>
+                    <option value="Thin">Thin Ksh. 100</option>
+                    <option value="Thick">Thick Ksh. 200</option>
+                    <option value="DoubleStack">DoubleStack Ksh. 250</option>
+                  </select><br>
+                  <label for="topping">Topping</label>
+                  <select class="browser-default custom-select custom-select-md mb-3" id="topping"
+                    onchange="toppySelectChange()">
+                    <option value=""></option>
+                    <option value="pepper">pepper Ksh. 100</option>
+                    <option value="pinapple">pinnapple Ksh. 200</option>
+                    <option value="mushroom">mushroom Ksh. 250</option>
+                    <option value="bacon">bacon Ksh. 300</option>
+                  </select><br>
+                  <label for="number">Quantity</label>
+                  <input type="number" class="form-control" id="number" placeholder="Quantity" min="1" required
+                    onchange="quantitySelectChange()">
+                  <button type="order" class="btn-order">Proceed</button>
+                </form>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="col-md-6">
-          <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">Flavor</th>
-                <th scope="col">Size</th>
-                <th scope="col">Crust</th>
-                <th scope="col">Toppings</th>
-                <th scope="col">Quantity</th>
-                <th scope="col">Total</th>
-              </tr>
-            </thead>
-            <tbody id="pizza">
-              <tr>
-                <td id="pflavor"></td>
-                <td id="psize"></td>
-                <td id="pcrust"></td>
-                <td id="ptoppings"></td>
-                <td id="pnumber"></td>
-                <td id="ptotal-cost"></td>
-              </tr>
-            </tbody>
-          </table>
-          <br>
-          <p>Delivery Ksh.150</p>
-        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Flavor</th>
+            <th scope="col">Size</th>
+            <th scope="col">Crust</th>
+            <th scope="col">Toppings</th>
+            <th scope="col">Quantity</th>
+            <th scope="col">Total</th>
+          </tr>
+        </thead>
+        <tbody id="pizza">
+          <tr>
+            <td id="pflavor"></td>
+            <td id="psize"></td>
+            <td id="pcrust"></td>
+            <td id="ptoppings"></td>
+            <td id="pnumber"></td>
+            <td id="ptotal-cost"></td>
+          </tr>
+        </tbody>
+      </table>
+      <br>
+      <p>Delivery Ksh.150</p>
+    </div>
 
-        <button type="delivery" class="btn delivery">Delivery Information</button>
-        <br><br>
-        <div class="delivery">
+    <button type="delivery" class="btn delivery">Delivery Information</button>
+    <br><br>
+
+    <div class="delivery">
+      <div class="card1">
+        <div class="card-header bg-white">
           <p id="del"></p>
           <form action="" class="deliver-form">
             <div class="form-group">
@@ -227,10 +242,13 @@
             </div>
           </form>
         </div>
-        <button type="check-out" class="btn btn-green check-out">Check-out</button>
-        <p id="message"></p>
       </div>
+
     </div>
+    <button type="check-out" class="btn btn-green check-out">Check-out</button>
+    <p id="message"></p>
+  </div>
+  </div>
   </div>
   </div>
   <div class="contacts">
@@ -256,7 +274,7 @@
       </div>
     </div>
   </div>
- <div class="footer text-center">
+  <div class="footer text-center">
     <footer>
       Masterpiece pizza
       <br> 2021
