--- a/masterpizza.html
+++ b/masterpizza.html
@@ -152,7 +152,7 @@
           <div class="col-md-6">
             <div class="card1">
               <div class="card-header bg-white">
-                <form action="" id="lets-order"><label for="myflavor">Flavor</label>
+                <form id="lets-order"><label for="myflavor">Flavor</label>
                   <select class="browser-default custom-select custom-select-md mb-3 name" id="flavor"
                     onchange="pizzaSelectChange()">
                     <option value=""></option>
@@ -247,8 +247,6 @@
     </div>
     <button type="check-out" class="btn btn-green check-out">Check-out</button>
     <p id="message"></p>
-  </div>
-  </div>
   </div>
   </div>
   <div class="contacts">
