modify the our menu section

--- a/masterpizza.html
+++ b/masterpizza.html
@@ -83,7 +83,62 @@
   <br>
   <br>
   <br>
-  <div class="container carousel slide carousel-multi-item" data-ride="carousel" id="offers">
+  <h2>Our Menu</h2>
+  <div class="container-fluid">
+      <div class="row" id="menu">
+          <div class="col-md-3">
+              <div class="image-text" id="nancy1">
+                  <div class="layout"></div>
+                  <img src="./assets/chicken-tikka-pizza_9402.jpg" height="150" alt="project1">
+                  <p id="pizza1" class="text">chicken-tikka-pizza</p>
+              </div>
+          </div>
+          <div class="col-md-3">
+              <div class="image-text" id="nancy2">
+                  <img src="./assets/hawaiianpizza_opener.jpg" height="150" alt="project2">
+                  <p id="pizza2" class="text">Hawaiian pizza</p>
+              </div>
+          </div>
+          <div class="col-md-3">
+              <div class="image-text" id="nancy3">
+                  <img src="./assets/peporoni.jpg" height="150" alt="project3">
+                  <p id="pizza3" class="text">Peporoni</p>
+              </div>
+          </div>
+          <div class="col-md-3">
+              <div class="image-text" id="nancy4">
+                  <img src="./assets/peporoni.jpg" height="150" alt="project4">
+                  <p id="pizza4" class="text">mexican wave</p>
+              </div>
+          </div>
+      </div>
+      <div class="row" id="menu">
+          <div class="col-md-3" id="project5">
+              <div class="image-text" id="nancy5">
+                  <img src="./assets/chicken-tikka-pizza_9402.jpg" height="150" alt="project1">
+                  <p id="pizza5" class="text">Margherita</p>
+              </div>
+          </div>
+          <div class="col-md-3">
+              <div class="image-text" id="nancy6">
+                  <img src="./assets/vegetarian-pizza_4988.jpg" height="150" alt="project2">
+                  <p id="pizza6" class="text">Vegeterian</p>
+              </div>
+          </div>
+          <div class="col-md-3">
+              <div class="image-text" id="nancy7">
+                  <img src="./assets/peporoni.jpg" height="150" alt="project3">
+                  <p id="pizza7" class="text">Peporoni</p>
+              </div>
+          </div>
+          <div class="col-md-3">
+              <div class="image-text" id="nancy8">
+                  <img src="./assets/vegetarian-pizza_4988.jpg" height="150" alt="project4">
+                  <p id="pizza8" class="text">Gourment</p>
+              </div>
+          </div>
+      </div>
+  <!-- <div class="container carousel slide carousel-multi-item" data-ride="carousel" id="offers">
     <div class="controls-top  text-align text-center">
       <h5>Our Offers</h5>
     </div>
@@ -143,7 +198,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <div class="container" id="yourorder">
     <div class="order-layout">
       <div class="controls-top text-center" id="Order-now">
