--- a/masterpizza.html
+++ b/masterpizza.html
@@ -18,7 +18,7 @@
 
 <body>
   <!--Navbar -->
-  <nav class="navbar navbar-expand-sm bg-warning navbar-dark yellow lighten-1">
+  <nav class="navbar navbar-expand-sm navbar-dark yellow lighten-1">
     <a class="navbar-brand" href="#home">Masterpiece pizza</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
@@ -85,224 +85,163 @@
   <br>
   <h2>Our Menu</h2>
   <div class="container-fluid">
-      <div class="row" id="menu">
-          <div class="col-md-3">
-              <div class="image-text" id="nancy1">
-                  <div class="layout"></div>
-                  <img src="./assets/chicken-tikka-pizza_9402.jpg" height="150" alt="project1">
-                  <p id="pizza1" class="text">chicken-tikka-pizza</p>
-              </div>
-          </div>
-          <div class="col-md-3">
-              <div class="image-text" id="nancy2">
-                  <img src="./assets/hawaiianpizza_opener.jpg" height="150" alt="project2">
-                  <p id="pizza2" class="text">Hawaiian pizza</p>
-              </div>
-          </div>
-          <div class="col-md-3">
-              <div class="image-text" id="nancy3">
-                  <img src="./assets/peporoni.jpg" height="150" alt="project3">
-                  <p id="pizza3" class="text">Peporoni</p>
-              </div>
-          </div>
-          <div class="col-md-3">
-              <div class="image-text" id="nancy4">
-                  <img src="./assets/peporoni.jpg" height="150" alt="project4">
-                  <p id="pizza4" class="text">mexican wave</p>
-              </div>
-          </div>
-      </div>
-      <div class="row" id="menu">
-          <div class="col-md-3" id="project5">
-              <div class="image-text" id="nancy5">
-                  <img src="./assets/chicken-tikka-pizza_9402.jpg" height="150" alt="project1">
-                  <p id="pizza5" class="text">Margherita</p>
-              </div>
-          </div>
-          <div class="col-md-3">
-              <div class="image-text" id="nancy6">
-                  <img src="./assets/vegetarian-pizza_4988.jpg" height="150" alt="project2">
-                  <p id="pizza6" class="text">Vegeterian</p>
-              </div>
-          </div>
-          <div class="col-md-3">
-              <div class="image-text" id="nancy7">
-                  <img src="./assets/peporoni.jpg" height="150" alt="project3">
-                  <p id="pizza7" class="text">Peporoni</p>
-              </div>
-          </div>
-          <div class="col-md-3">
-              <div class="image-text" id="nancy8">
-                  <img src="./assets/vegetarian-pizza_4988.jpg" height="150" alt="project4">
-                  <p id="pizza8" class="text">Gourment</p>
-              </div>
-          </div>
-      </div>
-  <!-- <div class="container carousel slide carousel-multi-item" data-ride="carousel" id="offers">
-    <div class="controls-top  text-align text-center">
-      <h5>Our Offers</h5>
-    </div>
-    <div class="pizza-images">
-      <div class="carousel-inner" role="listbox" id="menu">
-        <div class="carousel-item active">
-          <div class="col-md-4">
-            <div class="card mb-2">
-              <img class="card-img-top" src="./assets/hawaiianpizza_opener.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h2 class="card-title">Hawaiian</h2>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card mb-2">
-              <img class="card-img-top" src="./assets/vegetarian-pizza_4988.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h2 class="card-title">Vegeterian</h2>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card mb-2">
-              <img class="card-img-top" src="./assets/peporoni.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h2 class="card-title">Peperoni</h2>
-              </div>
-            </div>
-          </div>
+    <div class="row" id="menu">
+      <div class="col-md-3">
+        <div class="image-text" id="nancy1">
+          <div class="layout"></div>
+          <img src="./assets/chicken-tikka-pizza_9402.jpg" height="150" alt="project1">
+          <p id="pizza1" class="text">chicken-tikka-pizza</p>
         </div>
-        <div class="carousel-item">
-          <div class="col-md-4">
-            <div class="card mb-2">
-              <img class="card-img-top" src="./assets/hawaiianpizza_opener.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h2 class="card-title">Mexican Wave</h2>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card mb-2">
-              <img class="card-img-top" src="./assets/chicken-tikka-pizza_9402.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h2 class="card-title">Gourmet</h2>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card mb-2">
-              <img class="card-img-top" src="./assets/peporoni.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h2 class="card-title"> Chicken Tikka</h2>
+      </div>
+      <div class="col-md-3">
+        <div class="image-text" id="nancy2">
+          <img src="./assets/hawaiianpizza_opener.jpg" height="150" alt="project2">
+          <p id="pizza2" class="text">Hawaiian pizza</p>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="image-text" id="nancy3">
+          <img src="./assets/peporoni.jpg" height="150" alt="project3">
+          <p id="pizza3" class="text">Peporoni</p>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="image-text" id="nancy4">
+          <img src="./assets/peporoni.jpg" height="150" alt="project4">
+          <p id="pizza4" class="text">mexican wave</p>
+        </div>
+      </div>
+    </div>
+    <div class="row" id="menu">
+      <div class="col-md-3" id="project5">
+        <div class="image-text" id="nancy5">
+          <img src="./assets/chicken-tikka-pizza_9402.jpg" height="150" alt="project1">
+          <p id="pizza5" class="text">Margherita</p>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="image-text" id="nancy6">
+          <img src="./assets/vegetarian-pizza_4988.jpg" height="150" alt="project2">
+          <p id="pizza6" class="text">Vegeterian</p>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="image-text" id="nancy7">
+          <img src="./assets/peporoni.jpg" height="150" alt="project3">
+          <p id="pizza7" class="text">Peporoni</p>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="image-text" id="nancy8">
+          <img src="./assets/vegetarian-pizza_4988.jpg" height="150" alt="project4">
+          <p id="pizza8" class="text">Gourment</p>
+        </div>
+      </div>
+    </div>
+    <div class="container" id="yourorder">
+      <div class="order-layout">
+        <div class="controls-top text-center" id="Order-now">
+          <h2>Make an order</h2>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="card1">
+                <div class="card-header bg-white">
+                  <form id="lets-order"><label for="myflavor">Flavor</label>
+                    <select class="browser-default custom-select custom-select-md mb-3 name" id="flavor"
+                      onchange="pizzaSelectChange()">
+                      <option value=""></option>
+                      <option value="Hawaiian">Hawaiian</option>
+                      <option value="Margherita">vegeterian</option>
+                      <option value="Peperoni">Peperoni</option>
+                      <option value="Mexican Wave">Mexican Wave</option>
+                      <option value="Gourmet">new york slice</option>
+                      <option value="Chicken Tikka">Chicken Tikka</option>
+                    </select><br>
+                    <label for="mysize">Size</label>
+                    <select class="browser-default custom-select custom-select-md mb-3" id="size"
+                      onchange="proportionSelectChange()">
+                      <option value=""></option>
+                      <option value="Extra large">Extra large Ksh. 1550</option>
+                      <option value="Large">Large Ksh. 1250</option>
+                      <option value="Medium">Medium Ksh. 700</option>
+                      <option value="Small">Small Ksh. 500</option>
+                    </select><br>
+                    <label for="crust">Crust</label>
+                    <select class="browser-default custom-select custom-select-md mb-3" id="crust"
+                      onchange="crustySelectChange()">
+                      <option value=""></option>
+                      <option value="Thin">Thin Ksh. 100</option>
+                      <option value="Thick">Thick Ksh. 200</option>
+                      <option value="DoubleStack">DoubleStack Ksh. 250</option>
+                    </select><br>
+                    <label for="topping">Topping</label>
+                    <select class="browser-default custom-select custom-select-md mb-3" id="topping"
+                      onchange="toppySelectChange()">
+                      <option value=""></option>
+                      <option value="pepper">pepper Ksh. 100</option>
+                      <option value="pinapple">pinnapple Ksh. 200</option>
+                      <option value="mushroom">mushroom Ksh. 250</option>
+                      <option value="bacon">bacon Ksh. 300</option>
+                    </select><br>
+                    <label for="number">Quantity</label>
+                    <input type="number" class="form-control" id="number" placeholder="Quantity" min="1" required
+                      onchange="quantitySelectChange()">
+                    <button type="submit" class="btn-order">Proceed</button>
+                  </form>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </div> -->
-  <div class="container" id="yourorder">
-    <div class="order-layout">
-      <div class="controls-top text-center" id="Order-now">
-        <h2>Make an order</h2>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="card1">
-              <div class="card-header bg-white">
-                <form id="lets-order"><label for="myflavor">Flavor</label>
-                  <select class="browser-default custom-select custom-select-md mb-3 name" id="flavor"
-                    onchange="pizzaSelectChange()">
-                    <option value=""></option>
-                    <option value="Hawaiian">Hawaiian</option>
-                    <option value="Margherita">vegeterian</option>
-                    <option value="Peperoni">Peperoni</option>
-                    <option value="Mexican Wave">Mexican Wave</option>
-                    <option value="Gourmet">new york slice</option>
-                    <option value="Chicken Tikka">Chicken Tikka</option>
-                  </select><br>
-                  <label for="mysize">Size</label>
-                  <select class="browser-default custom-select custom-select-md mb-3" id="size"
-                    onchange="proportionSelectChange()">
-                    <option value=""></option>
-                    <option value="Extra large">Extra large Ksh. 1550</option>
-                    <option value="Large">Large Ksh. 1250</option>
-                    <option value="Medium">Medium Ksh. 700</option>
-                    <option value="Small">Small Ksh. 500</option>
-                  </select><br>
-                  <label for="crust">Crust</label>
-                  <select class="browser-default custom-select custom-select-md mb-3" id="crust"
-                    onchange="crustySelectChange()">
-                    <option value=""></option>
-                    <option value="Thin">Thin Ksh. 100</option>
-                    <option value="Thick">Thick Ksh. 200</option>
-                    <option value="DoubleStack">DoubleStack Ksh. 250</option>
-                  </select><br>
-                  <label for="topping">Topping</label>
-                  <select class="browser-default custom-select custom-select-md mb-3" id="topping"
-                    onchange="toppySelectChange()">
-                    <option value=""></option>
-                    <option value="pepper">pepper Ksh. 100</option>
-                    <option value="pinapple">pinnapple Ksh. 200</option>
-                    <option value="mushroom">mushroom Ksh. 250</option>
-                    <option value="bacon">bacon Ksh. 300</option>
-                  </select><br>
-                  <label for="number">Quantity</label>
-                  <input type="number" class="form-control" id="number" placeholder="Quantity" min="1" required
-                    onchange="quantitySelectChange()">
-                  <button type="submit" class="btn-order">Proceed</button>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6">
-      <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">Flavor</th>
-            <th scope="col">Size</th>
-            <th scope="col">Crust</th>
-            <th scope="col">Toppings</th>
-            <th scope="col">Quantity</th>
-            <th scope="col"onchange=totalSelectChange()>Total</th>
-          </tr>
-        </thead>
-        <tbody id="pizza">
-          <tr>
-            <td id="pflavor"></td>
-            <td id="psize"></td>
-            <td id="pcrust"></td>
-            <td id="ptoppings"></td>
-            <td id="pnumber"></td>
-            <td id="ptotal-cost"></td>
-          </tr>
-        </tbody>
-      </table>
-      <br>
-      <p>Delivery Ksh.150</p>
-    </div>
-
-    <button type="submit" class="btn-delivery">Delivery Information</button>
-    <br><br>
-
-    <div class="delivery">
-      <div class="card1">
-        <div class="card-header bg-white">
-          <p id="del"></p>
-          <form class="deliver-form" id="del-info">
-            <div class="form-group">
-              <input type="text" id="name" class="form-control mb-3" placeholder="Full Name">
-              <input type="text" id="phone" class="form-control mb-3" placeholder="Phone Number">
-              <input type="text" id="location" class="form-control mb-3" placeholder="Location for delivery">
-            </div>
-          </form>
-        </div>
+      <div class="col-md-6">
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">Flavor</th>
+              <th scope="col">Size</th>
+              <th scope="col">Crust</th>
+              <th scope="col">Toppings</th>
+              <th scope="col">Quantity</th>
+              <th scope="col" onchange=totalSelectChange()>Total</th>
+            </tr>
+          </thead>
+          <tbody id="pizza">
+            <tr>
+              <td id="pflavor"></td>
+              <td id="psize"></td>
+              <td id="pcrust"></td>
+              <td id="ptoppings"></td>
+              <td id="pnumber"></td>
+              <td id="ptotal-cost"></td>
+            </tr>
+          </tbody>
+        </table>
+        <br>
+        <p>Delivery Ksh.150</p>
       </div>
 
+      <button type="submit" class="btn-delivery">Delivery Information</button>
+      <br><br>
+
+      <div class="delivery">
+        <div class="card1">
+          <div class="card-header bg-white">
+            <p id="del"></p>
+            <form class="deliver-form" id="del-info">
+              <div class="form-group">
+                <input type="text" id="name" class="form-control mb-3" placeholder="Full Name">
+                <input type="text" id="phone" class="form-control mb-3" placeholder="Phone Number">
+                <input type="text" id="location" class="form-control mb-3" placeholder="Location for delivery">
+              </div>
+            </form>
+          </div>
+        </div>
+
+      </div>
+      <button type="button" class="btn-check-out" id="check-info">Check-out</button>
+      <p id="message"></p>
     </div>
-    <button type="button" class="btn-check-out" id="check-info">Check-out</button>
-    <p id="message"></p>
-  </div>
   </div>
   <div class="contacts">
     <h2>Contact Us</h2>
@@ -329,8 +268,7 @@
   </div>
   <div class="footer text-center">
     <footer>
-      Masterpiece pizza
-      <br> 2021
+      Masterpiece pizza @2021
     </footer>
   </div>
 </body>
